# ream

./: .gitignore  LICENSE  PYPI.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-core-api/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-cli/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-documentation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
analysis/: scf-improvement-proposals.md
data/: mimotable_questions.json  nl2formula_questions.json  nl2formula_sample_200.json  questions_large.json  questions_sample_200.json
demo/: README.md  financial_model.xlsx  generate_demos.py  mixed_types.xlsx  multi_sheet.xlsx  repeated_rows.xlsx  run_demos.py  simple_table.xlsx  sparse_data.xlsx
docs/: getting-started.md
paper/: ream-benchmark.tex  scf-benchmark.tex
ream_xlsx/: __init__.py  __main__.py  _cli.py  _converter.py  _exceptions.py  _formula.py  _io.py  _options.py
results/: eval_addressed_v2.json  eval_extra_formats_v5.json  eval_full.json  eval_large_4o.json  eval_large_5_4.json  eval_mimotable_ooxml.json  eval_nano_frtr.json  eval_nano_mimotable.json  eval_nano_nl2formula.json  eval_nl2formula_ooxml.json  eval_no_truncation_v3.json  eval_ream_frtr.json  eval_ream_mimotable.json  eval_ream_nl2formula.json  eval_ream_v12_frtr.json  eval_ream_v12_mimotable.json  eval_ream_v12_nl2formula.json
spec/: ream-rfc-draft-v12.md  ream-rfc-draft-v9.md
src/: converters.py  extract_mimotable.py  extract_nl2formula.py  extract_questions.py  generate_questions.py  run_eval.py  scoring.py
tests/: test_api.py  test_cli.py  test_errors.py  test_formula.py  test_options.py  test_package.py
