[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ream-xlsx"
version = "0.1.0"
description = "Convert XLSX workbooks to REAM text format"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openpyxl>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
ream-xlsx = "ream_xlsx._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ream_xlsx"]

[tool.hatch.build.targets.sdist]
include = ["ream_xlsx/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["src/"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
